@@ -21,13 +21,17 @@ module ActiveHash
 
       def belongs_to(association_id, options = {})
 
-        define_method(association_id) do
-          options = {
-            :class_name => association_id.to_s.classify,
-            :foreign_key => association_id.to_s.foreign_key
-          }.merge(options)
+        options = {
+          :class_name => association_id.to_s.classify,
+          :foreign_key => association_id.to_s.foreign_key
+        }.merge(options)
 
+        define_method(association_id) do
           options[:class_name].constantize.find(send(options[:foreign_key]))
+        end
+
+        define_method("#{association_id}=") do |new_value|
+          attributes[ options[:foreign_key].to_sym ] = new_value.id
         end
 
       end
