@@ -3,6 +3,7 @@
   - added ActiveHash::Base.belongs_to, which works with ActiveRecord or ActiveHash classes (thanks to baldwindavid)
   - added .delete_all method that clears the in-memory array
   - added support for Hash-style yaml (think, Rails fixtures)
+  - added setter for parent object on belongs_to ( city = City.new; city.state = State.first; city.state_id == State.first.id )
 
 2009-10-12
   - auto-assign fields after calling data= instead of after calling .all
